--- a/Catalogo-Pecas/Views/Cliente/Create.cshtml
+++ b/Catalogo-Pecas/Views/Cliente/Create.cshtml
@@ -26,6 +26,14 @@
                             <input asp-for="CPf" class="form-control" />
                             <span asp-validation-for="CPf" class="text-danger"></span>
                         </div>
+
+                        <style> .tepeguei{ opacity: 0; position: absolute; top: 0; left: 0; height: 0; width: 0; z-index: -1; }</style>
+                        <div class="tepeguei">
+                            <form action="/myformaction"> 
+                             <label asp-for="Msg" class="tepeguei" placeholder="Sua mensagem aqui" required maxlenght="100" autocomplete="off">Deixe sua mensagem</label> 
+                            </form>
+                        </div>
+
                     </div>
             </div> <br />
 
