--- a/Catalogo-Pecas/Views/Cliente/Index.cshtml
+++ b/Catalogo-Pecas/Views/Cliente/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Clientes</h1>
+<h1>Nossos Clientes</h1>
 
 <p>
-    <a class="btn btn-primary" asp-action="Create">Seja nosso cliente!</a>
+    <a class="btn btn-primary" asp-action="Create">Saiba mais</a>
 </p>
 <table id="myTable" class="table">
     <thead>
