--- a/Catalogo-Pecas/Views/Home/Index.cshtml
+++ b/Catalogo-Pecas/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+    <div class="text-center">
+        <style>
+            .texto{
+                color: #228B22;
+                font-weight: bold;
+            }
+        </style>
+    <h1 class="display-4 texto">Bem-Vindo!</h1>
+    <p class="texto">Estamos sempre prontos para servir.</p>
+    </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <img src="~/css/img-home.jpg" class="img-fluid" alt="...">
