--- a/Catalogo-Pecas/Views/Produto/Index.cshtml
+++ b/Catalogo-Pecas/Views/Produto/Index.cshtml
@@ -37,8 +37,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Preço)
             </td>
+
             <td class="row">
-                <a asp-action="Edit" class="btn btn-success m-1" asp-route-id="@item.Id">Editar</a>
+                <a asp-action="Edit" class="btn btn-success mr-1" asp-route-id="@item.Id">Editar</a>
             </td>
         </tr>
 }
