--- a/Catalogo-Pecas/Views/Produto/Create.cshtml
+++ b/Catalogo-Pecas/Views/Produto/Create.cshtml
@@ -13,17 +13,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
+                <label asp-for="Nome" class="control-label">Nome do Produto</label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Descrição" class="control-label"></label>
+                <label asp-for="Descrição" class="control-label">Descrição</label>
                 <input asp-for="Descrição" class="form-control" />
                 <span asp-validation-for="Descrição" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Preço" class="control-label"></label>
+                <label asp-for="Preço" class="control-label">Preço (R$)</label>
                 <input asp-for="Preço" class="form-control" />
                 <span asp-validation-for="Preço" class="text-danger"></span>
             </div>
