--- a/Catalogo-Pecas/Views/Produto/Edit.cshtml
+++ b/Catalogo-Pecas/Views/Produto/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Preço" class="control-label"></label>
+                <label asp-for="Preço" class="control-label">Preço (R$)</label>
                 <input asp-for="Preço" class="form-control" />
                 <span asp-validation-for="Preço" class="text-danger"></span>
             </div>
