--- a/Catalogo-Pecas/Views/Cliente/Index.cshtml
+++ b/Catalogo-Pecas/Views/Cliente/Index.cshtml
@@ -18,6 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Mensagem)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -31,6 +34,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Mensagem)
             </td>
             <td class="row">
                 <a asp-action="Details" class="btn btn-primary m-1" asp-route-id="@item.Id">Detalhes</a>
