{Estilizando a página Home e Navbar}

--- a/Catalogo-Pecas/Views/Cliente/Create.cshtml
+++ b/Catalogo-Pecas/Views/Cliente/Create.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Fale conosco</h1>
+<h1>Nossos Clientes</h1>
 
-<h4>Preencha os campos corretamente e entraremos em contato!</h4>
+<h4>Preencha os campos corretamente para incluir novo cliente</h4>
 <hr />
 <div class="row">
     <div class="col-md">
