--- a/Catalogo-Pecas/Views/Home/Index.cshtml
+++ b/Catalogo-Pecas/Views/Home/Index.cshtml
@@ -1,15 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
-    <div class="text-center">
-        <style>
-            .texto{
-                color: #228B22;
-                font-weight: bold;
-            }
-        </style>
-    <h1 class="display-4 texto">Bem-Vindo!</h1>
-    <p class="texto">Estamos sempre prontos para servir.</p>
-    </div>
 
-    <img src="~/css/img-home.jpg" class="img-fluid" alt="...">
+<div class="hero">
+    <div class="hero-content">
+        <h1 class="display-4 texto">Bem-Vindo!</h1>
+        <p class="texto">Estamos sempre prontos para servir.</p>
+    </div>
+</div>
