--- a/Catalogo-Pecas/Views/Login/Index.cshtml
+++ b/Catalogo-Pecas/Views/Login/Index.cshtml
@@ -12,6 +12,7 @@
         @TempData["MensagemErro"]
     </div>
 }
+<h1>Registre-se</h1>
 
 <form asp-controller="Login" asp-action="Entrar" method="post">
   <div class="mb-3">
