--- a/Catalogo-Pecas/Views/Produto/Index.cshtml
+++ b/Catalogo-Pecas/Views/Produto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Nosso Catálogo de Produtos</h1>
+<h1>Catálogo de Produtos</h1>
 
 <p>
     <a class="btn btn-primary" asp-action="Create">Incluir Produto</a>
