--- a/Catalogo-Pecas/Views/Shared/_Layout.cshtml
+++ b/Catalogo-Pecas/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #008000;">
             <div class="container">
-                <a class="navbarsrc() colortext" asp-area="" asp-controller="Home" asp-action="Index">AC PEÇAS</a>
+                <a class="navbarsrc() texto-logo" asp-area="" asp-controller="Home" asp-action="Index">AC PEÇAS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,23 +21,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link colortext" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link colortext" asp-area="" asp-controller="Produto">Catálogo</a>
+                            <a class="nav-link" asp-area="" asp-controller="Produto">Catálogo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link colortext" asp-area="" asp-controller="Cliente" asp-action="Create">Contate-nos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Cliente" asp-action="Create">Clientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link colortext" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
-                        <style>
-                            .colortext{
-                                color: #228B22;
-                            }
-                        </style>
                 </div>
             </div>
         </nav>
