--- a/Catalogo-Pecas/Views/Shared/_LayoutDeslogado.cshtml
+++ b/Catalogo-Pecas/Views/Shared/_LayoutDeslogado.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #008000;">
             <div class="container">
-                <a class="navbarsrc() colortext" asp-area="" asp-controller="Home" asp-action="Index">AC PEÇAS</a>
+                <a class="navbarsrc() texto-logo" asp-area="" asp-controller="Home" asp-action="Index">AC PEÇAS</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,6 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
-             <style>
-                .pb-3{
-                    background-color: #FFFAFA;
-                    }
-    </style>
             @RenderBody()
         </main>
     </div>
