--- a/Catalogo-Pecas/wwwroot/css/site.css
+++ b/Catalogo-Pecas/wwwroot/css/site.css
@@ -1,13 +1,9 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
+﻿a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
 
-/* Provide sufficient contrast against white background */
 a {
   color: #0366d6;
 }
@@ -24,8 +20,6 @@ a {
   border-color: #1861ac;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
 html {
   font-size: 14px;
 }
@@ -51,15 +45,13 @@ button.accept-policy {
   line-height: inherit;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
 html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
+  
   margin-bottom: 60px;
 }
 .footer {
@@ -67,5 +59,49 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 60px;
+}
+
+.texto-logo {
+    color: #FFFFF0;
+    font-weight: bold;
+}
+
+.texto {
+    color: #228B22;
+    font-weight: bold;
+}
+
+.hero {
+    background: url('../img/agricultura-sustentável.jpg') no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: calc(100vh - 135px);
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    z-index: 0;
+}
+
+    .hero::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,.3);
+        z-index: 1;
+    }
+
+
+.hero-content {
+    position: absolute;
+    z-index: 2;
+    top: 20px;
+    left: 40px;
+    padding: 40px;
+    background-color: rgba(255,255,255, .9);
+    border-radius: 10px;
 }
